5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1643_2711.log
== TEST (2019-04-13 14:19:42) 
-- CODE:
saldo = float(input("valor disponivel: "))
qtru = int(input"quantidade de tickets do ru: ")
ticket = float(input("valor do ticket: "))
qtps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus"))
if	(qtru + ticket + qtps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
File "XXXX", line 2
    qtru = int(input"quantidade de tickets do ru: ")
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:20:06) 
-- CODE:
saldo = float(input("valor disponivel: "))
qtru = float(input"quantidade de tickets do ru: ")
ticket = float(input("valor do ticket: "))
qtps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus"))
if	(qtru + ticket + qtps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
File "XXXX", line 2
    qtru = float(input"quantidade de tickets do ru: ")
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:20:24) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = float(input"quantidade de tickets do ru: ")
ticket = float(input("valor do ticket: "))
ps = float(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus"))
if	(qtru + ticket + qtps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
File "XXXX", line 2
    ru = float(input"quantidade de tickets do ru: ")
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:21:08) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: ")
ticket = float(input("valor do ticket: "))
ps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus"))
if	(qtru + ticket + qtps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
File "XXXX", line 3
    ticket = float(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:21:32) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus"))
if	(qtru + ticket + qtps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if	(qtru + ticket + qtps + vlps <= saldo):
NameError: name 'qtru' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:22:16) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = float(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus"))
if	(qtru + ticket + qtps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if	(qtru + ticket + qtps + vlps <= saldo):
NameError: name 'qtru' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:22:43) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = float(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus"))
if	(qtru + ticket + qtps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if	(qtru + ticket + qtps + vlps <= saldo):
NameError: name 'qtru' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:23:12) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = float(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(qtru + ticket + qtps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if	(qtru + ticket + qtps + vlps <= saldo):
NameError: name 'qtru' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:23:49) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = float(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:24:05) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = float(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.271154
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:24:20) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = float(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:24:37) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = float(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.154882
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:25:00) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:25:18) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.17661
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:25:26) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:25:43) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.125836
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:26:10) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:27:00) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("suficiente".upper)
else:
	print("INSUFICIENTE")
-- OUTPUT:
<built-in method upper of str object at 0x7fd921aa2570>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:27:11) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("suficiente".upper)
else:
	print("INSUFICIENTE")
-- OUTPUT:
<built-in method upper of str object at 0x7fe7c56e4570>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:27:19) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("suficiente".upper)
else:
	print("INSUFICIENTE")
-- OUTPUT:
<built-in method upper of str object at 0x7fa2396ed570>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:27:57) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
ps = int(input("quantidade de passes de bus: "))
vlps = float(input("valor dos passes de bus: "))
if	(ru + ticket + ps + vlps <= saldo):
	print("suficiente".upper)
else:
	print("insuficiente".upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f7d3a038570>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:56:16) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
passe = int(input("quantidade de passes de bus: "))
valpas = float(input("valor dos passes de bus: "))
conta=ru + ticket + passe + valpas
if	(conta<= saldo):
	print("suficiente".upper)
else:
	print("insuficiente".upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f6ef44bb570>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:57:08) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
passe = int(input("quantidade de passes de bus: "))
valpas = float(input("valor dos passes de bus: "))
conta=ru + ticket + passe + valpas
if	(conta<= saldo):
	print("suficiente".upper)
else:
	print("insuficiente".upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f3bcf296570>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:58:57) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
passe = int(input("quantidade de passes de bus: "))
valpas = float(input("valor dos passes de bus: "))
conta=ru + ticket + passe + valpas
if	(conta<= saldo):
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:59:18) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
passe = int(input("quantidade de passes de bus: "))
valpas = float(input("valor dos passes de bus: "))
conta=ru + ticket + passe + valpas
if	(conta<= saldo):
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- EXECUTION TIME:
0.141586
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:59:26) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
passe = int(input("quantidade de passes de bus: "))
valpas = float(input("valor dos passes de bus: "))
conta=ru + ticket + passe + valpas
if	(conta<= saldo):
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- EXECUTION TIME:
0.214823
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:04:03) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
passe = int(input("quantidade de passes de bus: "))
valpas = float(input("valor dos passes de bus: "))
conta=ru + ticket + passe + valpas
if	(conta<= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:04:22) 
-- CODE:
saldo = float(input("valor disponivel: "))
ru = int(input("quantidade de tickets do ru: "))
ticket = float(input("valor do ticket: "))
passe = int(input("quantidade de passes de bus: "))
valpas = float(input("valor dos passes de bus: "))
conta=ru + ticket + passe + valpas
if	(conta<= saldo):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.215355
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:49:50) 
-- CODE:
valor = float(input("dinheiro inicial: "))
tickets = int(input("quantidade: "))
valortick = float(input("valor: "))
passes = int(input("quantidade: "))
valorpass = float(input("valor: "))
if valor >= (tickets*valortick) + (passes*valorpass):
	mensagem = "suficiente"
else:
	mensagem = "insuficiente"
print(mensagem.upper())
-- EXECUTION TIME:
0.211774
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
